syntax = "proto2";

package protocol;

message HeartBeatAck {}

// 错误信息回复
message ErrAck {
	required string AckName		= 1;	//正常应回复的ack 名字
	required string Err 		= 2;
}

// 聊天数据回复
message ChatAck {
	required string Data		= 1;
}

// 创建房间
message CreateRoomAck {
	required string RoomId		= 1;
	required int32	Num			= 2;
	required bool	Result		= 3;
}

// 离开房间
message LeaveRoomAck {
	required string RoomId 		= 1;
	required int32	Num			= 2;
	required bool	Result		= 3;
}

// 进入房间
message EnterRoomAck {
	required string RoomId		= 1;
	required string	RoomName	= 2;
	required bool	Result		= 3;
}